# 2026-Pro

./: .gitignore  README.md
.claude/: launch.json
docs/: BUGFIX_PLAN_2026-06-24.md  BUGFIX_PROGRESS.md  CLOUD_DEPLOY_HANDOFF.md  DEVICE_PROVISIONING_SPEC.md  DEVICE_REGISTRATION_PLAN.md  HANDOFF.md  QA_REPORT_2026-06-24.md  QA_TEST_PROMPT_MINIMAX.md  SUPABASE_DEVICE_CONFIG_SCHEMA.md  admin-manual.md  ai-handoff-prompt.md  architecture.md  asset-pipeline-plan.md  builder-and-billing.md  ccp-builder-sim-parity-report.md  deployment-vercel-wss.md  logic-guide.md  manual.md  pages-code.md  pages-guide.md  project-overview.md  project-progress.md  roadmap-v3-parity.md  serial-debug-console.md  settings-and-assets-plan.md
firmware/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
firmware/components/ccp_fonts/: CMakeLists.txt  lv_font_dseg14_112.c  lv_font_dseg14_128.c  lv_font_dseg14_144.c  lv_font_dseg14_160.c  lv_font_dseg14_32.c  lv_font_dseg14_48.c  lv_font_dseg14_64.c  lv_font_dseg14_80.c  lv_font_dseg14_96.c  lv_font_dseg7_112.c  lv_font_dseg7_128.c  lv_font_dseg7_144.c  lv_font_dseg7_160.c  lv_font_dseg7_32.c  lv_font_dseg7_48.c  lv_font_dseg7_64.c  lv_font_dseg7_80.c  lv_font_dseg7_96.c  lv_font_montserrat_112.c  lv_font_montserrat_128.c  lv_font_montserrat_144.c  lv_font_montserrat_160.c  lv_font_montserrat_32.c  lv_font_montserrat_64.c  lv_font_montserrat_80.c  lv_font_montserrat_96.c
firmware/components/ccp_fonts/include/: ccp_fonts.h
firmware/components/home_ui/: CMakeLists.txt  home_ui.c
firmware/components/home_ui/include/: home_ui.h
firmware/components/sync_manager/: CMakeLists.txt  sync_manager.c
firmware/components/sync_manager/include/: sync_manager.h
mobile/: README.md
schema/: layout.schema.json  manifest.schema.json  mqtt-messages.schema.json
sdcard/: README.md
server/: .dockerignore  .env.example  .env.prod.example  (+5 more)
(+181 files in other folders)
