idf_component_register(
    SRCS
        "lv_font_montserrat_32.c"
        "lv_font_montserrat_64.c"
        "lv_font_montserrat_80.c"
        "lv_font_montserrat_96.c"
        "lv_font_montserrat_112.c"
        "lv_font_montserrat_128.c"
        "lv_font_montserrat_144.c"
        "lv_font_montserrat_160.c"
        "lv_font_dseg7_32.c"
        "lv_font_dseg7_48.c"
        "lv_font_dseg7_64.c"
        "lv_font_dseg7_80.c"
        "lv_font_dseg7_96.c"
        "lv_font_dseg7_112.c"
        "lv_font_dseg7_128.c"
        "lv_font_dseg7_144.c"
        "lv_font_dseg7_160.c"
        "lv_font_dseg14_32.c"
        "lv_font_dseg14_48.c"
        "lv_font_dseg14_64.c"
        "lv_font_dseg14_80.c"
        "lv_font_dseg14_96.c"
        "lv_font_dseg14_112.c"
        "lv_font_dseg14_128.c"
        "lv_font_dseg14_144.c"
        "lv_font_dseg14_160.c"
    INCLUDE_DIRS "include"
    REQUIRES lvgl
)
